--- a/Ariketak css/Trabajo01.html
+++ b/Ariketak css/Trabajo01.html
@@ -3,61 +3,67 @@
 <head>
 <title>Music4u</title>
 <meta charset="UTF-8">
+<style>
+  body{background-color: rgb(42, 3, 68);}
+  #bat{background-color: rgba(137, 43, 226, 0.76);color: black;}
+  #bi{background-color: rgba(0, 0, 0, 0.753);}
+  li{color: rgb(255, 255, 255);}
+</style>
 </head>
-<body style="background-color: rgb(42, 3, 68)">
+<body>
 <table width="100%" border="1">
     <tr width="100%">
         <td colspan="2" align="center" style="background-color: rgba(137, 43, 226, 0.76)"><h1>MUSIC4U</h1> </td>
     </tr>
-    <tr>
-        <td colspan="2" width="10%" style="background-color: rgba(137, 43, 226, 0.76)">
+    <tr id="bat">
+        <td colspan="2" width="10%">
             <table border="0" width="100%" >
-               <td><a href="http://www.newmusicas.com/" style="color: black">Most popular</a></td>
-               <td><a href="https://www.rocktails.tv//ranking-canciones" style="color: black">Top 50</a></td>
-               <td><a href="https://www.rocktails.tv/playlists" style="color: black">Playlists</a></td>
-               <td><a href="https://www.rocktails.tv//musica-recomendada" style="color: black">Recommended</a></td>
-               <td><a href="" style="color: black">Genres</a></td>
-               <td><a href="" style="color: black">Colaborations</a></td>
+               <td><a href="http://www.newmusicas.com/">Most popular</a></td>
+               <td><a href="https://www.rocktails.tv//ranking-canciones">Top 50</a></td>
+               <td><a href="https://www.rocktails.tv/playlists">Playlists</a></td>
+               <td><a href="https://www.rocktails.tv//musica-recomendada">Recommended</a></td>
+               <td><a href="">Genres</a></td>
+               <td><a href="">Colaborations</a></td>
              </table>
         </td>
     </tr>
     <tr width="100%">
         <td width="20%">
-            <li style="color: rgb(255, 255, 255)"> Prok - Café solo
+            <li> Prok - Café solo
                 <audio controls>
                 <source src="audio/prok-cafe-solo-videoclip-prod-dj-keru.mp3" type="audio/mpeg">
               </audio></li>
-              <li style="color: rgb(255, 255, 255)"> Daddy Yankee - Limbo
+              <li> Daddy Yankee - Limbo
                   <audio controls>
                 <source src="audio/daddy-yankee-limbo-video-oficial.mp3" type="audio/mpeg">
               </audio></li>
-              <li style="color: rgb(255, 255, 255)"> Lil Nas - Old town road ft Billy Ray Cyrus
+              <li> Lil Nas - Old town road ft Billy Ray Cyrus
                   <audio controls>
                 <source src="audio/lil-nas-x-old-town-road-feat-billy-ray-cyrus-remix.mp3" type="audio/mpeg">
               </audio></li>
-              <li style="color: rgb(255, 255, 255)"> Natos y Waor - DISPUESTOS A MORIR ft. C.R.O & Homer el Mero Mero<br>
+              <li> Natos y Waor - DISPUESTOS A MORIR ft. C.R.O & Homer el Mero Mero<br>
                   <audio controls>
                 <source src="audio/natos-y-waor-dispuestos-a-morir-ft-cro-homer-el-mero-mero-videoclip-oficial.mp3" type="audio/mpeg">
               </audio></li>
-              <li style="color: rgb(255, 255, 255)"> Wiz Khalifa - See you again ft Charlie Puth
+              <li> Wiz Khalifa - See you again ft Charlie Puth
                 <audio controls>
                 <source src="audio/wiz-khalifa-see-you-again-ft-charlie-puth-official-video-furious-7-soundtrack.mp3" type="audio/mpeg">
               </audio></li>
-              <li style="color: rgb(255, 255, 255)"> Green valley ft SFDK - Nunca pararé
+              <li> Green valley ft SFDK - Nunca pararé
                 <audio controls>
                 <source src="audio/green-valley-feat-sfdk-nunca-parare-videoclip.mp3" type="audio/mpeg">
               </audio></li>
-              <li style="color: rgb(255, 255, 255)"> Nikone - Ser o no ser
+              <li> Nikone - Ser o no ser
                 <audio controls>
                 <source src="audio/nikone-ser-o-no-ser.mp3" type="audio/mpeg">
               </audio></li>
-              <li style="color: rgb(255, 255, 255)"> Twenty one pilots - Stressed out
+              <li> Twenty one pilots - Stressed out
                 <audio controls>
                 <source src="audio/twenty-one-pilots-stressed-out-official-video.mp3" type="audio/mpeg">
               </audio></li>
         </td>
         <td width="80%">
-            <table border="0" style="background-color: rgba(0, 0, 0, 0.753)">
+            <table border="0" id="bi">
                 <tr>
                     <td width="20%"><a href="http://www.newmusicas.com/musica-clasica/"><img src="img/musica_clasica1.jpg" width="100%"></a></td>
                     <td width="20%"><a href="http://www.newmusicas.com/blue/"><img src="img/blues.png" width="100%"></a></td>
@@ -82,11 +88,6 @@
             </table>
         </td>
     </tr>
-
-
-
-
 </table>
-
 </body>
 </html>
