--- a/Ariketak css/ejemplo8.html
+++ b/Ariketak css/ejemplo8.html
@@ -5,6 +5,8 @@
 body {background-color:lightgrey;}
 h1   {color:blue;}
 p    {color:green;}
+.titulo-red {color:red;}
+#izena {color:cyan;background-color: darkblue;}
 </style>
 </head>
 <body>
@@ -12,6 +14,9 @@ p    {color:green;}
 
 <h1>This is a heading</h1>
 <p>This is a paragraph.</p>
-
+<h1 style="color:blueviolet; background-color: gold;">Adibidea 1</h1>
+<h1>Adibidea 2</h1> 
+<h1 class="titulo-red">Adibidea 3</h1>
+<h1 id="izena">Adibidea 4</h1>
 </body>
 </html>
