--- a/Ariketak_css/ejemplo10.html
+++ b/Ariketak_css/ejemplo10.html
@@ -5,27 +5,34 @@
     <meta charset="UTF-8">
 <style>
     div {
-        background-color:black;
-        color:white; 
+        background-color:rgb(0, 0, 0);
+        color:rgb(255, 255, 255); 
         padding:0px; 
-        margin: 0px;
-         }
+        margin: 100px;
+    }
     .bat{
         background-color: blueviolet; 
         color:black; 
-        padding: 100px; 
-        margin: 30px;
-        }
+        padding: 10px; 
+        margin: 10px;
+    }
     .bi{
-        background-color: whitesmoke; 
-        color: blue; 
+        background-color: rgb(255, 255, 255); 
+        color: rgb(0, 0, 0); 
         padding: 50px; 
-        margin: 80px;}
+        margin: 50px;
+    }
+    .hiru{
+        background-color: coral;
+        color: black;
+        padding: 100px;
+        margin: 100px;
+    }
 </style>
 </head>
 <body>
     <div>
-        <div>
+        <div class="bat">
                 <h2>Así será la Copa Davis que por primera vez se celebra durante una semana en Madrid</h2>
                 <p>Un total de 42 millones de euros, más de 100.000 visitantes, 600 empleos... 
                     La Copa Davis, que se celebra por primera vez durante una semana en Madrid, tendrá un importante impacto económico en la ciudad.
@@ -36,7 +43,7 @@
                     y estima que la cantidad de asistentes puede alcanzar los 185.000.</p>
                 <img src="img/pique.jpg">
         </div>
-        <div class="bat">
+        <div class="bi">
 
                 <img src="img/Iberia.jpg">
                 <h2>Iberia compra Air Europa por 1.000 millones de euros</h2>
@@ -50,7 +57,7 @@
                     dirigida por su consejero delegado, Luis Gallego.</p>
     
         </div>
-        <div>
+        <div class="hiru">
             <h2>Más de 8.000 de los 57. 500 árboles de Palma están en riesgo medio de caída</h2>
             <img src="img/palma.jpg">
             <p>En Palma hay aproximadamente 8.000 árboles etiquetados como de riesgo medio de caída con un total de 3.000 palmeras entre alineación y zonas verdes que, junto a los pinos, son las que mas padecen el efecto de los fuertes vientos, como el de la jornada de ayer. De hecho, este mismo año se han talado varios ejemplares de palmeras y pinos en Paseo de Sagrera y Plaza de la Reina entre otros, por su mal estado.
