--- a/Ariketak css/Trabajo01.html
+++ b/Ariketak css/Trabajo01.html
@@ -4,10 +4,19 @@
 <title>Music4u</title>
 <meta charset="UTF-8">
 <style>
-  body{background-color: rgb(42, 3, 68);}
-  #bat{background-color: rgba(137, 43, 226, 0.76);color: black;}
-  #bi{background-color: rgba(0, 0, 0, 0.753);}
-  li{color: rgb(255, 255, 255);}
+  body{
+    background-color: rgb(42, 3, 68);
+  }
+  #bat{
+    background-color: rgba(137, 43, 226, 0.76);
+    color: black;
+  }
+  #bi{
+    background-color: rgba(0, 0, 0, 0.753);
+  }
+  li{
+    color: rgb(255, 255, 255);
+  }
 </style>
 </head>
 <body>
