--- a/Ariketak_css/ejemplo11.html
+++ b/Ariketak_css/ejemplo11.html
@@ -1,1 +1,41 @@
-s
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Aitor es el mejor!!</title>
+    <style>
+        .barra{
+            float: left;
+            margin: 20px;
+        }
+        .bat{
+            background-color: rgba(127, 32, 165, 0.623);
+            color: rgb(0, 0, 0);
+            padding: 30px;
+        }
+        .bi{
+            background-color: rgba(128, 255, 0, 0.589);
+            color: rgb(3, 2, 1);
+            padding: 30px;
+        }
+        .hiru{
+            background-color: rgba(100, 148, 237, 0.664);
+            color: black;
+            padding: 30px;
+        }
+        .lau{
+            background-color: rgba(187, 135, 67, 0.712);
+            color: black;
+            padding: 30px;
+        }
+    </style>
+</head>
+<body>
+    <div class="barra">
+        <div class="bat barra">Flyweight</div>
+        <div class="bi barra" >Bantamweight</div>
+        <div class="hiru barra">Featherweight</div>
+        <div class="lau barra">Lightweight</div>
+    </div>
+
+</body>
+</html>
