--- a/Ariketak_css/ejemplo13.html
+++ b/Ariketak_css/ejemplo13.html
@@ -9,7 +9,7 @@
 .img-container {
   float: left;
   width: 33.33%;
-  padding: 5px;
+  padding: 2.5px;
 }
 
 .clearfix::after {
@@ -26,13 +26,13 @@
 
 <div class="clearfix">
   <div class="img-container">
-  <img src="img_5terre.jpg" alt="Italy" style="width:100%">
+  <img src="img/italia.jpg" style="width:100%">
   </div>
   <div class="img-container">
-  <img src="img_forest.jpg" alt="Forest" style="width:100%">
+  <img src="img/bosque.jpg" style="width:100%">
   </div>
   <div class="img-container">
-  <img src="img_mountains.jpg" alt="Mountains" style="width:100%">
+  <img src="img/montañas.jpg" style="width:100%">
   </div>
 </div>
 
