--- a/Ariketak_css/ejemplo13.html
+++ b/Ariketak_css/ejemplo13.html
@@ -29,10 +29,10 @@
   <img src="img/italia.jpg" style="width:100%">
   </div>
   <div class="img-container">
-  <img src="img/bosque.jpg" style="width:100%">
+  <img src="img/bosque.jpg" style="width:100%" height="475">
   </div>
   <div class="img-container">
-  <img src="img/montañas.jpg" style="width:100%">
+  <img src="img/mountain.jpg" style="width:100%" height="475">
   </div>
 </div>
 
