--- a/Ariketak css/Trabajo01.html
+++ b/Ariketak css/Trabajo01.html
@@ -26,14 +26,14 @@
     </tr>
     <tr id="bat">
         <td colspan="2" width="10%">
-            <table border="0" width="100%" >
-               <td><a href="http://www.newmusicas.com/">Most popular</a></td>
-               <td><a href="https://www.rocktails.tv//ranking-canciones">Top 50</a></td>
-               <td><a href="https://www.rocktails.tv/playlists">Playlists</a></td>
-               <td><a href="https://www.rocktails.tv//musica-recomendada">Recommended</a></td>
-               <td><a href="">Genres</a></td>
-               <td><a href="">Colaborations</a></td>
-             </table>
+            <lu border="0" width="100%" >
+               <li><a href="http://www.newmusicas.com/">Most popular</a></li>
+               <li><a href="https://www.rocktails.tv//ranking-canciones">Top 50</a></li>
+               <li><a href="https://www.rocktails.tv/playlists">Playlists</a></li>
+               <li><a href="https://www.rocktails.tv//musica-recomendada">Recommended</a></li>
+               <li><a href="">Genres</a></li>
+               <li><a href="">Colaborations</a></li>
+            </lu>
         </td>
     </tr>
     <tr width="100%">
