--- a/Ariketak_css/ejemplo15.html
+++ b/Ariketak_css/ejemplo15.html
@@ -1,12 +1,114 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>Music4u</title>
+<meta charset="UTF-8">
 <style>
-    
+  body{
+    background-color: rgb(42, 3, 68);
+  }
+  #bat{
+    background-color: rgba(137, 43, 226, 0.76);
+    color: black;
+    text-align: center;
+  }
+  #bi{
+    background-color: rgba(0, 0, 0, 0.753);
+  }
+  li a {
+    color: rgb(255, 255, 255);
+    background-color: rgba(137, 43, 226, 0.76);
+    list-style-type: none;
+    display: inline-block;
+    padding: 14px 16px;
+  }
+  li a:hover {
+      background-color: black;
+  }
+  li{
+    color: rgb(255, 255, 255);
+    background-color: rgba(137, 43, 226, 0.76);
+    list-style-type: none;
+    display: inline-block;
+    padding: 14px 16px;
+  }
 </style>
 </head>
 <body>
+        <div id="bat"> <h1>MUSIC4U</h1> </div>
+        <div id="bat">
+            <ul>
+               <li><a href="http://www.newmusicas.com/">Most popular</a></li>
+               <li><a href="https://www.rocktails.tv//ranking-canciones">Top 50</a></li>
+               <li><a href="https://www.rocktails.tv/playlists">Playlists</a></li>
+               <li><a href="https://www.rocktails.tv//musica-recomendada">Recommended</a></li>
+               <li><a href="">Genres</a></li>
+               <li><a href="">Colaborations</a></li>
+            </ul>
+        </div>
+        </td>
+    </tr>
+    <tr width="100%">
+        <div width="20%">
+            <li> Prok - Café solo
+                <audio controls>
+                <source src="audio/prok-cafe-solo-videoclip-prod-dj-keru.mp3" type="audio/mpeg">
+              </audio></li>
+              <li> Daddy Yankee - Limbo
+                  <audio controls>
+                <source src="audio/daddy-yankee-limbo-video-oficial.mp3" type="audio/mpeg">
+              </audio></li>
+              <li> Lil Nas - Old town road ft Billy Ray Cyrus
+                  <audio controls>
+                <source src="audio/lil-nas-x-old-town-road-feat-billy-ray-cyrus-remix.mp3" type="audio/mpeg">
+              </audio></li>
+              <li> Natos y Waor - DISPUESTOS A MORIR ft. C.R.O & Homer el Mero Mero<br>
+                  <audio controls>
+                <source src="audio/natos-y-waor-dispuestos-a-morir-ft-cro-homer-el-mero-mero-videoclip-oficial.mp3" type="audio/mpeg">
+              </audio></li>
+              <li> Wiz Khalifa - See you again ft Charlie Puth
+                <audio controls>
+                <source src="audio/wiz-khalifa-see-you-again-ft-charlie-puth-official-video-furious-7-soundtrack.mp3" type="audio/mpeg">
+              </audio></li>
+              <li> Green valley ft SFDK - Nunca pararé
+                <audio controls>
+                <source src="audio/green-valley-feat-sfdk-nunca-parare-videoclip.mp3" type="audio/mpeg">
+              </audio></li>
+              <li> Nikone - Ser o no ser
+                <audio controls>
+                <source src="audio/nikone-ser-o-no-ser.mp3" type="audio/mpeg">
+              </audio></li>
+              <li> Twenty one pilots - Stressed out
+                <audio controls>
+                <source src="audio/twenty-one-pilots-stressed-out-official-video.mp3" type="audio/mpeg">
+              </audio></li>
+        </div>
+        <td width="80%">
+            <table border="0" id="bi">
+                <tr>
+                    <td width="20%"><a href="http://www.newmusicas.com/musica-clasica/"><img src="img/musica_clasica1.jpg" width="100%"></a></td>
+                    <td width="20%"><a href="http://www.newmusicas.com/blue/"><img src="img/blues.png" width="100%"></a></td>
+                    <td width="20%"><a href="http://www.newmusicas.com/jazz/"><img src="img/jazz.jpg" width="100%"></a></td>
+                    <td width="20%"><a href="http://www.newmusicas.com/funk/"><img src="img/Funk.jpg" width="100%"></a></td>
+                    <td width="20%"><a href="http://www.newmusicas.com/country/"><img src="img/country.jpg" width="100%"></a></td>
+                </tr>
+                <tr>
+                    <td width="20%"><a href="http://www.newmusicas.com/gothic/"><img src="img/industrial.jpg" width="100%"></a></td>
+                    <td width="20%"><a href="http://www.newmusicas.com/rock/"><img src="img/rock.png" width="100%"></a></td>
+                    <td width="20%"><a href="http://www.newmusicas.com/metal/"><img src="img/Heavy-Metal-main.jpg" width="100%"></a></td>
+                    <td width="20%"><a href="http://www.newmusicas.com/salsa/"><img src="img/salsa.jpg" width="100%"></a></td>
+                    <td width="20%"><a href="http://www.newmusicas.com/opera/"><img src="img/opera1.jpg" width="100%"></a></td>
+                </tr>
+                <tr>
+                    <td width="20%"><a href="http://www.newmusicas.com/reggae/"><img src="img/reggae.jpg" width="100%"></a></td>
+                    <td width="20%"><a href="http://www.newmusicas.com/hip-hop/"><img src="img/hip-hop.jpg" width="100%"></a></td>
+                    <td width="20%"><a href="http://www.newmusicas.com/rap/"><img src="img/rap.jpg" width="100%"></a></td>
+                    <td width="20%"><a href="http://www.newmusicas.com/soul/"><img src="img/soul.jpg" width="100%"></a></td>
+                    <td width="20%"><a href="http://www.newmusicas.com/electronica/"><img src="img/EDM.jpg" width="100%"></a></td>
+                </tr>
+            </table>
+        </td>
+    </tr>
 
-    
 </body>
 </html>
