--- a/Ariketak_css/ejemplo15.html
+++ b/Ariketak_css/ejemplo15.html
@@ -11,27 +11,44 @@
     background-color: rgba(137, 43, 226, 0.76);
     color: black;
     text-align: center;
+
   }
   #bi{
     background-color: rgba(0, 0, 0, 0.753);
+    height: 300;
+    float: left;
+    padding: 2.5px;
   }
-  li a {
+  #hiru{
+    content: "";
+    clear: both;
+    display: table;
+  }
+  #lau{
     color: rgb(255, 255, 255);
     background-color: rgba(137, 43, 226, 0.76);
-    list-style-type: none;
-    display: inline-block;
     padding: 14px 16px;
-  }
-  li a:hover {
-      background-color: black;
+    text-align: center;
   }
   li{
     color: rgb(255, 255, 255);
     background-color: rgba(137, 43, 226, 0.76);
     list-style-type: none;
     display: inline-block;
+    width: 200px;
     padding: 14px 16px;
   }
+  li a {
+    color: rgb(255, 255, 255);
+    background-color: rgba(137, 43, 226, 0.76);
+    list-style-type: none;
+    display: inline-block;
+    padding: 16px 18px;
+  }
+  li a:hover {
+      background-color: black;  
+  }
+  
 </style>
 </head>
 <body>
@@ -46,69 +63,62 @@
                <li><a href="">Colaborations</a></li>
             </ul>
         </div>
-        </td>
-    </tr>
-    <tr width="100%">
-        <div width="20%">
-            <li> Prok - Café solo
+
+        <div id="lau">
+            <div> Prok - Café solo
                 <audio controls>
                 <source src="audio/prok-cafe-solo-videoclip-prod-dj-keru.mp3" type="audio/mpeg">
-              </audio></li>
-              <li> Daddy Yankee - Limbo
+              </audio></div>
+              <div> Daddy Yankee - Limbo
                   <audio controls>
                 <source src="audio/daddy-yankee-limbo-video-oficial.mp3" type="audio/mpeg">
-              </audio></li>
-              <li> Lil Nas - Old town road ft Billy Ray Cyrus
+              </audio></div>
+              <div> Lil Nas - Old town road ft Billy Ray Cyrus
                   <audio controls>
                 <source src="audio/lil-nas-x-old-town-road-feat-billy-ray-cyrus-remix.mp3" type="audio/mpeg">
-              </audio></li>
-              <li> Natos y Waor - DISPUESTOS A MORIR ft. C.R.O & Homer el Mero Mero<br>
+              </audio></div>
+              <div> Natos y Waor - DISPUESTOS A MORIR ft. C.R.O & Homer el Mero Mero<br>
                   <audio controls>
                 <source src="audio/natos-y-waor-dispuestos-a-morir-ft-cro-homer-el-mero-mero-videoclip-oficial.mp3" type="audio/mpeg">
-              </audio></li>
-              <li> Wiz Khalifa - See you again ft Charlie Puth
+              </audio></div>
+              <div> Wiz Khalifa - See you again ft Charlie Puth
                 <audio controls>
                 <source src="audio/wiz-khalifa-see-you-again-ft-charlie-puth-official-video-furious-7-soundtrack.mp3" type="audio/mpeg">
-              </audio></li>
-              <li> Green valley ft SFDK - Nunca pararé
+              </audio></div>
+              <div> Green valley ft SFDK - Nunca pararé
                 <audio controls>
                 <source src="audio/green-valley-feat-sfdk-nunca-parare-videoclip.mp3" type="audio/mpeg">
-              </audio></li>
-              <li> Nikone - Ser o no ser
+              </audio></div>
+              <div> Nikone - Ser o no ser
                 <audio controls>
                 <source src="audio/nikone-ser-o-no-ser.mp3" type="audio/mpeg">
-              </audio></li>
-              <li> Twenty one pilots - Stressed out
+              </audio></div>
+              <div> Twenty one pilots - Stressed out
                 <audio controls>
                 <source src="audio/twenty-one-pilots-stressed-out-official-video.mp3" type="audio/mpeg">
-              </audio></li>
+              </audio></div>
         </div>
-        <td width="80%">
-            <table border="0" id="bi">
-                <tr>
-                    <td width="20%"><a href="http://www.newmusicas.com/musica-clasica/"><img src="img/musica_clasica1.jpg" width="100%"></a></td>
-                    <td width="20%"><a href="http://www.newmusicas.com/blue/"><img src="img/blues.png" width="100%"></a></td>
-                    <td width="20%"><a href="http://www.newmusicas.com/jazz/"><img src="img/jazz.jpg" width="100%"></a></td>
-                    <td width="20%"><a href="http://www.newmusicas.com/funk/"><img src="img/Funk.jpg" width="100%"></a></td>
-                    <td width="20%"><a href="http://www.newmusicas.com/country/"><img src="img/country.jpg" width="100%"></a></td>
-                </tr>
-                <tr>
-                    <td width="20%"><a href="http://www.newmusicas.com/gothic/"><img src="img/industrial.jpg" width="100%"></a></td>
-                    <td width="20%"><a href="http://www.newmusicas.com/rock/"><img src="img/rock.png" width="100%"></a></td>
-                    <td width="20%"><a href="http://www.newmusicas.com/metal/"><img src="img/Heavy-Metal-main.jpg" width="100%"></a></td>
-                    <td width="20%"><a href="http://www.newmusicas.com/salsa/"><img src="img/salsa.jpg" width="100%"></a></td>
-                    <td width="20%"><a href="http://www.newmusicas.com/opera/"><img src="img/opera1.jpg" width="100%"></a></td>
-                </tr>
-                <tr>
-                    <td width="20%"><a href="http://www.newmusicas.com/reggae/"><img src="img/reggae.jpg" width="100%"></a></td>
-                    <td width="20%"><a href="http://www.newmusicas.com/hip-hop/"><img src="img/hip-hop.jpg" width="100%"></a></td>
-                    <td width="20%"><a href="http://www.newmusicas.com/rap/"><img src="img/rap.jpg" width="100%"></a></td>
-                    <td width="20%"><a href="http://www.newmusicas.com/soul/"><img src="img/soul.jpg" width="100%"></a></td>
-                    <td width="20%"><a href="http://www.newmusicas.com/electronica/"><img src="img/EDM.jpg" width="100%"></a></td>
-                </tr>
-            </table>
-        </td>
-    </tr>
+                <div id="hiru">
+                    <div id="bi"><a href="http://www.newmusicas.com/musica-clasica/"><img src="img/musica_clasica1.jpg" height="244"></a></div>
+                    <div id="bi"><a href="http://www.newmusicas.com/blue/"><img src="img/blues.png" height="244"></a></div>
+                    <div id="bi"><a href="http://www.newmusicas.com/jazz/"><img src="img/jazz.jpg" height="244"></a></div>
+                    <div id="bi"><a href="http://www.newmusicas.com/funk/"><img src="img/Funk.jpg" height="244"></a></div>
+                    <div id="bi"><a href="http://www.newmusicas.com/coudivy/"><img src="img/country.jpg" height="244"></a></div>
+                </div>
+                <div id="hiru">
+                    <div id="bi"><a href="http://www.newmusicas.com/gothic/"><img src="img/industrial.jpg" height="272"></a></div>
+                    <div id="bi"><a href="http://www.newmusicas.com/rock/"><img src="img/rock.png" height="272"></a></div>
+                    <div id="bi"><a href="http://www.newmusicas.com/metal/"><img src="img/Heavy-Metal-main.jpg" height="272"></a></div>
+                    <div id="bi"><a href="http://www.newmusicas.com/salsa/"><img src="img/salsa.jpg" height="272"></a></div>
+                    <div id="bi"><a href="http://www.newmusicas.com/opera/"><img src="img/opera1.jpg" height="272"></a></div>
+                </div>
+                <div id="hiru">
+                    <div id="bi"><a href="http://www.newmusicas.com/reggae/"><img src="img/reggae.jpg" height="271,7"></a></div>
+                    <div id="bi"><a href="http://www.newmusicas.com/hip-hop/"><img src="img/hip-hop.jpg" height="271,7"></a></div>
+                    <div id="bi"><a href="http://www.newmusicas.com/rap/"><img src="img/rap.jpg" height="271,7"></a></div>
+                    <div id="bi"><a href="http://www.newmusicas.com/soul/"><img src="img/soul.jpg" height="271,7"></a></div>
+                    <div id="bi"><a href="http://www.newmusicas.com/electronica/"><img src="img/EDM.jpg" height="271,7"></a></div>
+                </div>
 
 </body>
 </html>
