--- a/Ariketak_eval2/ejemplo01.html
+++ b/Ariketak_eval2/ejemplo01.html
@@ -4,6 +4,7 @@
 <style>
 .flex-container {
   display: flex;
+  /*flex-direction:column*/
   background-color: DodgerBlue;
 }
 .flex-container > div {
