--- a/Ariketak_eval2/ejemplo01.html
+++ b/Ariketak_eval2/ejemplo01.html
@@ -7,7 +7,7 @@
   /*flex-direction:column*/
   background-color: DodgerBlue;
 }
-.flex-container > div {
+.flex-container > div /*aplicar a div interior los atributos*/{
   background-color: #f1f1f1;
   margin: 10px;
   padding: 20px;
