--- a/Ariketak_eval2/ejemplo02.html
+++ b/Ariketak_eval2/ejemplo02.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 <style>
+
 .flex-container {
   display: flex;
   height: 300px;
-  justify-content: center;
+  justify-content: center; /*que el contenido quede en el centro*/
   align-items: center;
   background-color: DodgerBlue;
 }
