--- a/Ariketak_eval2/ejemplo03.html
+++ b/Ariketak_eval2/ejemplo03.html
@@ -21,6 +21,7 @@
 
     <div class="flex-container">
         <div style="order: 3">1</div>
+        <!--el orden en que estaran los div-->
         <div style="order: 2">2</div>
         <div style="order: 4">3</div>
         <div style="order: 1">4</div>
