--- a/Ariketak_eval2/ejemplo04.html
+++ b/Ariketak_eval2/ejemplo04.html
@@ -21,6 +21,7 @@
 
 <div class="flex-container">
         <div style="flex-grow: 1">1</div>
+        <!--para cambiar tamaño-->
         <div style="flex-grow: 1">2</div>
         <div style="flex-grow: 8">3</div>
 </div>
@@ -28,7 +29,7 @@
       
 
 <p>A Flexible Layout must have a parent element with the <em>display</em> property set to <em>flex</em>.</p>
-
+<!-- (<em>) para poner cursiva la letra-->
 <p>Direct child elements(s) of the flexible container automatically becomes flexible items.</p>
 
 </body>
