--- a/Ariketak_eval2/javascript/ejemplo02_javascript.html
+++ b/Ariketak_eval2/javascript/ejemplo02_javascript.html
@@ -13,6 +13,6 @@
 <img id="myImage" src="../img/blues.png" style="width:100px">
 
 <button onclick="document.getElementById('myImage').src='../img/country.jpg'">Turn off the light</button>
-
+<!--los "../" vale para ir atras en una carpeta y despues poder avanzar-->
 </body>
 </html>
