--- a/Ariketak_eval2/javascript/ejercicio01_javascript.html
+++ b/Ariketak_eval2/javascript/ejercicio01_javascript.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
+<body>
+
+<button id="boton1" onclick="document.getElementById('myImage').src='pic_bulbon.gif'">Turn on the light</button>
+
+<img id="myImage" src="pic_bulboff.gif" style="width:100px">
+
+<button id="boton2" onclick="document.getElementById('myImage').src='pic_bulboff.gif'">Turn off the light</button>
+
+<button id="boton0" onclick="mostrar()">Start</button>
+
 <script>
 
 function ocultar() {
-    document.getElementById("myImage").style.display = "none";
+    document.getElementById("myImag e").style.display = "none";
     document.getElementById("boton1").style.display = "none";
     document.getElementById("boton2").style.display = "none";
 }
@@ -17,20 +26,9 @@ function mostrar() {
 }
 
 ocultar();
+
+
 </script>
-
-</head>
-<body>
-
-
-<button onclick="document.getElementById('Boton1').src='../img/blues.png'">Turn on the light</button>
-
-<img id="myImage" src="../img/blues.png" style="width:100px">
-
-<button onclick="document.getElementById('Boton2').src='../img/country.jpg'">Turn off the light</button>
-
-<button id="boton0" onclick="mostrar()">Start</button>
-
 
 </body>
 </html>
