--- a/Ariketak_eval2/javascript/ejercicio01_javascript.html
+++ b/Ariketak_eval2/javascript/ejercicio01_javascript.html
@@ -6,7 +6,7 @@
 
 <img id="myImage" src="pic_bulboff.gif" style="width:100px">
 
-<button id="boton2" onclick="document.getElementById('myImage').src='pic_bulboff.gif'">Turn off the light</button>
+<button id="boton2" onclick="document.getElementById('myImage').src='../img/blu'">Turn off the light</button>
 
 <button id="boton0" onclick="mostrar()">Start</button>
 
